Refactor: Game creation using Redis, remove isPlaying, improve frontend UI
- Refactored  to fetch  from Redis for game creation.
- Removed  field from  and related DTOs as it was unused.
- Updated  to match service changes.
- Fixed frontend  to correctly display participant count and remove game status checks.
- Updated  to prioritize displaying  in the header.
- Cleaned up unused imports and visibility of methods in .
- Removed .